Tue Jun  5 19:15:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/Utils.h:
          Added export macro

Tue Jun  5 10:22:38 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        Merged branch DDS4CCM_QOS_Handler to trunk.
        Making the DDS4CCM independant of the DDS vendor.

          commit a096657b276c719b3d9b29f61431f7f16b2774f7
          Merge: 6f6e689 f1bc8fc
          Author: Marcel Smit <msmit@remedy.nl>
          Date:   Tue Jun 5 12:12:24 2012 +0200

              Merge branch 'master' into DDS4CCM_QOS_Handler

          commit 6f6e6893ae6571abe5239ffa7c0d867dac938378
          Author: Marcel Smit <msmit@remedy.nl>
          Date:   Tue Jun 5 12:00:41 2012 +0200

                  * CIAO/connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
                  * CIAO/connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
                    Fixed compilation issues in case RTI DDS.

                  * CIAO/connectors/dds4ccm/impl/dds4ccm_conf.h:
                    Added include to XML_Noop.

                  * CIAO/connectors/dds4ccm/tests/ContentFilteredTopic/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
                    Fixed compilation issues in case RTI DDS.

          commit a4d8e8b951b96ae8dbc6f03497a3d8d8db9c44ae
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Tue Jun 5 11:23:29 2012 +0200

                  * CIAO/connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
                    Fixed error in debug statement

          commit 63e48ca6a34e6a974b6e60e369b733f3f159e58d
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Tue Jun 5 10:24:50 2012 +0200

                  * CIAO/connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
                  * CIAO/connectors/dds4ccm/impl/DDS_Get_T.cpp:
                  * CIAO/connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
                  * CIAO/connectors/dds4ccm/impl/DDS_Update_T.cpp: